# keencli

./: .env.example  .gitignore  AI_MODELS.md  Cargo.toml  LICENSE  README.md  config.toml  config.toml.example  flake.nix  install.sh  uninstall.sh
src/: analyze.rs  api.rs  config.rs  credentials.rs  llm.rs  log_filter.rs  main.rs  mask.rs  output.rs  paths.rs  prompt.rs
