[package]
name = "keencli"
version = "1.0.2"
authors = ["Kaan (Aethrox) Demirel"]
description = "Keenetic router'ınızdan bilgi toplayan komut satırı aracı."
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.45", features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
config = { version = "0.15.24", features = ["toml"] }
dotenv = "0.15.0"
md5 = "0.8.0"
regex = "1.12.4"
secrecy = "0.10.3"
reqwest = { version = "0.13.4", features = ["cookies", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
